correcciones terminadas y nuevos avances

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,14 +3,14 @@ import ThemeToggle from '../components/ThemeToggle.astro'
 
 const navItems = [
     {
-      title: "Inicio",
-      label: "inicio",
-      url: "/#top"
-    },
-    {
       title: "Experiencia",
       label: "experiencia",
       url: "/#experiencia",
+    },
+    {
+      title: "Proyectos",
+      label: "proyectos",
+      url: "/#proyectos",
     },
     {
       title: "Habilidades",
