--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@ import MailIcon from '../icons/Mail.astro'
 ---
 
 <div class="max-w-xl">
-    <div class="flex gap-8 mb-4">
+    <!-- <div class="flex gap-8 mb-4">
         <img
           class="rounded-full shadow-lg size-24"
           src="/img/marcos-img.png"
@@ -22,7 +22,7 @@ import MailIcon from '../icons/Mail.astro'
         >
           <Badge>Disponible para trabajar</Badge>
         </a>
-    </div>
+    </div> -->
     <h1
     class="text-4xl font-bold tracking-tight text-blue-400 sm:text-5xl dark:text-white"
   >
