--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,14 @@ import Layout from '../layouts/Layout.astro';
 
 import SectionContainer from '../components/SectionContainer.astro'
 import Experience from '../components/Experience.astro';
-import Work from '../icons/Work.astro';
+import Briefcase from '../icons/Briefcase.astro';
 import Code from '../icons/Code.astro';
+import Settings from '../icons/Settings.astro';
 import Skills from '../components/Skills.astro';
 import ProfileCheck from '../icons/ProfileCheck.astro';
 import AboutMe from '../components/AboutMe.astro'
 import Hero from '../components/Hero.astro';
+import Projects from '../components/Projects.astro';
 ---
 
 <Layout 
@@ -24,16 +26,25 @@ import Hero from '../components/Hero.astro';
 		<div class="space-y-24">
 		<SectionContainer id="experiencia">
 			<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-blue-400 dark:text-white">
-				<Work class="size-8"/>
+				<Briefcase class="size-8"/>
 				Experiencia Laboral
 			</h2>
 
 			<Experience />
 		</SectionContainer>
 
-		<SectionContainer id="habilidades">
+		<SectionContainer id="proyectos">
 			<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-blue-400 dark:text-white">
 				<Code class="size-8"/>
+				Proyectos
+			</h2>
+
+			<Projects />
+		</SectionContainer>
+
+		<SectionContainer id="habilidades">
+			<h2 class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-blue-400 dark:text-white">
+				<Settings class="size-8"/>
 				Habilidades
 			</h2>
 
