--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,21 +5,9 @@ import ExperienceItems from "./ExperienceItems.astro";
 const experiences = [
     {
         date: '19/02/2024 hasta 19/03/2023',
-        title: 'Support and Implementation Consultant',
+        title: 'Consultor de Soporte e Implementación',
         company: 'Brio Team',
         description: 'Tareas: Especialista en implementación y desarrollo de software, digitalizar formularios, uso de excel, etc.'
-    },
-    {
-        date: '01/01/2024 - Actualmente...',
-        title: 'Desarrollador web - Autónomo - Remoto',
-        company: 'Colegio de Psicopedagogos de Santa Fe',
-        description: 'Mantenimiento y desarrollo web en WordPress.'
-    },
-    {
-        date: '09/2024 hasta 03/2024',
-        title: 'Desarrollador Full Stack - Remoto',
-        company: 'Studio by M - Macarena Bernal',
-        description: 'Responsble de la plataforma, componentes y utilidades para la creacion y desarrollo de la pagina web. La web se trata venta de cursos por Macarena Bernal y seguimiento de los cursos comprados por los usuarios.'
     },
     {
         date: '01/11/2021 hasta 30/04/2023',
@@ -40,3 +28,17 @@ const experiences = [
     }                  
 </ol>
 
+<!--
+    otros ejemplos: 
+    {
+    date: '01/01/2024 - Actualmente...',
+    title: 'Desarrollador web - Autónomo - Remoto',
+    company: 'Colegio de Psicopedagogos de Santa Fe',
+    description: 'Mantenimiento y desarrollo web en WordPress.'
+},
+{
+    date: '09/2024 hasta 03/2024',
+    title: 'Desarrollador Full Stack - Remoto',
+    company: 'Studio by M - Macarena Bernal',
+    description: 'Responsble de la plataforma, componentes y utilidades para la creacion y desarrollo de la pagina web. La web se trata venta de cursos por Macarena Bernal y seguimiento de los cursos comprados por los usuarios.'
+} -->
