--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -18,9 +18,9 @@ const TAGS = {
 }
 const PROJECTS = [
   {
-    title: "BLOOM Estudio",
+    title: "Bloom Studio",
     description:
-      "App web para un estudio de maquillaje profesional. Desarrollada con Java, Next.js, React y Tailwind CSS.",
+      "Esta web esta destinada a un studio de belleza, la misma cuenta con funcionalidades como: Pagos integrados utilizando Mercado pago, sistema de reservas,envios de comprobantes via email, entre otros. Tambien cuenta con un dashboard del lado del profesional para llevar un control de reservas, historial de pagos, agregar o eliminar contenido del book, etc. Desarrollada con Java, Next.js, React y Tailwind CSS.",
     link: "https://ng-ui-git-main-joairazabal.vercel.app/",
     image: "/img/projects/bloom.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
@@ -36,7 +36,7 @@ const PROJECTS = [
   {
     title: "Psicopedagogos Santa Fe",
     description:
-      "Aplicacion web destinada al Colegio de Profesionales de la Psicopedagogía de la la provincia de Santa Fe(Argentina). Esta tiene como funcionalidad dar noticia de eventos, noticias administrativas, capacitaciones, etc.",
+      "Aplicacion web destinada al Colegio de Profesionales de la Psicopedagogía de la la provincia de Santa Fe(Argentina). Esta tiene como funcionalidad dar noticia de eventos, noticias administrativas, capacitaciones, etc. Desarrollada en Wordpress.",
     link: "https://psicopedagogossantafe.org/",
     image: "/img/projects/psicopedagogia.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
@@ -65,7 +65,7 @@ const PROJECTS = [
           {link && (
             <LinkButton href={link}>
               <Link class="size-4" />
-              Preview
+              Web
             </LinkButton>
           )}
         </footer>
