correcciones de componentes y agregado de icono

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -8,16 +8,17 @@
   >
     <p>
       Me llamo Marcos Solis. Desde 2022, he estado sumergido en el mundo de la programación,
-      buscando constantemente aprender y mejorar mis habilidades. Recientemente, <strong
+      buscando constantemente aprender y mejorar mis habilidades. En Noviembre de 2023, <strong
         >me gradué de un bootcamp en plataforma5 con el objetivo de ampliar mis conocimientos y trabajar de manera colaborativa en equipos</strong
       >.
     </p>
 
     <p>
-      Actualmente, estoy trabajando en proyectos propios para no perder el ritmo y seguir fortaleciendo mis habilidades. <strong
-        >Trabaje durante un año y medio como playero en una estacion de servicio, lo cual me ayudó enormemente a aprender cómo trabajar en equipo y para una empresa
-      </strong
-      >. Hoy en día, puedo afirmar que soy una persona con sólidas habilidades blandas y un amplio conocimiento técnico en
+      Actualmente, estoy trabajando en proyectos propios para no perder el ritmo y seguir fortaleciendo mis habilidades.
+      <strong>En todos los proyectos que he trabajado, me ha tocado desarrollar tanto en el backend como en el frontend.</strong>
+      <br/>  
+      También trabaje durante un año y medio como playero en una estacion de servicio, lo cual me ayudó enormemente a aprender cómo trabajar en equipo y para una empresa. 
+        Hoy en día, puedo afirmar que soy una persona con sólidas habilidades blandas y un amplio conocimiento técnico en
       desarrollo web.
     </p>
 
