--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,13 +4,13 @@ import ExperienceItems from "./ExperienceItems.astro";
 
 const experiences = [
     {
-        date: '19/02/2024 hasta 19/03/2023',
+        date: 'Ene 2024 - Mar 2024',
         title: 'Consultor de Soporte e Implementación',
         company: 'Brio Team',
         description: 'Tareas: Especialista en implementación y desarrollo de software, digitalizar formularios, uso de excel, etc.'
     },
     {
-        date: '01/11/2021 hasta 30/04/2023',
+        date: 'Nov 2021 - Abr 2023',
         title: 'Empleado de Atención al Cliente - Tiempo Completo',
         company: 'YPF A.M GAS SA',
         description: 'Tareas: Cargado de combustible, manejo de caja y dinero, limpieza,etc.'
