--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,17 +23,17 @@ class="mt-6 text-xl text-blue-400 dark:[&>strong]:text-yellow-500 [&>strong]:tex
   > De Santa Fe, Argentina. Especializado en el desarrollo de aplicaciones web y mobile.
 </p>
 <nav class="flex flex-wrap gap-4 mt-8">
-  <Social href="https://www.linkedin.com/in/marcos-solis-512862283/">
+  <!-- <Social href="https://www.linkedin.com/in/marcos-solis-512862283/">
     <LinkedInIcon class="size-4 md:size-6" />
     LinkedIn
   </Social>
   <Social href="https://github.com/marcossolis07">
     <GitHubIcon class="size-4 md:size-6"/>
     GitHub
-  </Social>
+  </Social> -->
   <Social href="mailto:marcossolis023@gmail.com">
     <MailIcon class="size-4 md:size-6" />
-    Contáctame
+    marcossolis023@gmail.com
   </Social>
   <Social href={personalData.resume}>
     <DownloadIcon class="size-4 md:size-6" />
@@ -42,7 +42,7 @@ class="mt-6 text-xl text-blue-400 dark:[&>strong]:text-yellow-500 [&>strong]:tex
 </nav>
 </div>
 
-<img width="200" height="200" src="/img/marcos-foto-1.jpg" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
+<img width="200" height="200" src="/img/marcos-foto-1.jpg" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
 </article>
 
 <!-- <div class="flex gap-8 mb-4">
