--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -16,6 +16,7 @@ import Redux from "../icons/Redux.astro"
 import MongoDB from "../icons/MongoDB.astro"
 import Figma from "../icons/Figma.astro"
 import PHP from "../icons/PHP.astro"
+import Docker from "../icons/Docker.astro";
 
 
 const SKILLS_ICONS: Record<string, any> = {
@@ -34,6 +35,7 @@ const SKILLS_ICONS: Record<string, any> = {
   MongoDB,
   Figma,
   PHP,
+  Docker
 }
 const skills = [
     {
@@ -104,11 +106,11 @@ const skills = [
     },
     {
       "name": "Redux",
-      "keywords": []
+      "keywords": ["Desarrollo Web", "Frontend"]
     },
     {
       "name": "MongoDB",
-      "keywords": []
+      "keywords": ["Bases de Datos", "Almacenamiento de Datos", "Backend"]
     },
     {
       "name": "Figma",
@@ -116,6 +118,10 @@ const skills = [
     },
     {
       "name": "PHP",
+      "keywords": ["Desarrollo Web", "Backend", "Servidor"]
+    },
+    {
+      "name": "Docker",
       "keywords": []
     }
   ]
