arregle el link a studio by m, la navbar y acomode todos los componentes

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,80 +1,52 @@
 ---
- const personalImageAlt = "Marcos Solis"
+const personalImageAlt = "Marcos Solis";
 ---
 
-<article class="flex flex-col items-center justify-center gap-8 text-gray-400 dark:text-gray-300 md:flex-row">
+<article
+  class="flex flex-col items-center justify-center gap-8 text-gray-400 dark:text-gray-300 md:flex-row"
+>
   <div
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-400 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Marcos Solis. Desde 2022, he estado sumergido en el mundo de la programación,
-      buscando constantemente aprender y mejorar mis habilidades. En Noviembre de 2023, <strong
-        >me gradué de un bootcamp en plataforma5 con el objetivo de ampliar mis conocimientos y trabajar de manera colaborativa en equipos</strong
+      Me llamo Marcos Solis. Desde 2022, he estado sumergido en el mundo de la
+      programación, buscando constantemente aprender y mejorar mis habilidades.
+      En Noviembre de 2023, <strong
+        >me gradué de un bootcamp en plataforma5 con el objetivo de ampliar mis
+        conocimientos y trabajar de manera colaborativa en equipos</strong
       >.
     </p>
 
     <p>
-      Actualmente, estoy trabajando en proyectos propios para no perder el ritmo y seguir fortaleciendo mis habilidades.
-      <strong>En todos los proyectos que he trabajado, me ha tocado desarrollar tanto en el backend como en el frontend.</strong>
-      <br/>  
-      También trabaje durante un año y medio como playero en una estacion de servicio, lo cual me ayudó enormemente a aprender cómo trabajar en equipo y para una empresa. 
-        Hoy en día, puedo afirmar que soy una persona con sólidas habilidades blandas y un amplio conocimiento técnico en
-      desarrollo web.
+      Actualmente, estoy trabajando en proyectos propios para no perder el ritmo
+      y seguir fortaleciendo mis habilidades.
+      <strong
+        >En todos los proyectos que he trabajado, me ha tocado desarrollar tanto
+        en el backend como en el frontend.</strong
+      >
+      <br />
+      También trabaje durante un año y medio como playero en una estacion de servicio,
+      lo cual me ayudó enormemente a aprender cómo trabajar en equipo y para una
+      empresa. Hoy en día, puedo afirmar que soy una persona con sólidas habilidades
+      blandas y un amplio conocimiento técnico en desarrollo web.
     </p>
 
     <p>
       Como desarrollador, <strong
         >me encuentro concentrado en mi crecimiento personal y profesional,
-        siendo apasionado por aprender y mejorar métodos de desarrollo para aumentar la productividad</strong
-      >. Estoy abierto a explorar propuestas que me permitan continuar creciendo y aprendiendo en este
-      fascinante campo de la programación.
+        siendo apasionado por aprender y mejorar métodos de desarrollo para
+        aumentar la productividad</strong
+      >. Estoy abierto a explorar propuestas que me permitan continuar creciendo
+      y aprendiendo en este fascinante campo de la programación.
     </p>
   </div>
 
-  <img width="200" height="200" src="/img/marcos-foto-5.png" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
-
+  <img
+    width="200"
+    height="200"
+    src="/svg/programming.svg"
+    alt={personalImageAlt}
+    class="object-cover w-64 h-full p-1 md:order-2 lg:p-2 md:w-[25vw]"
+    style=""
+  />
 </article>
-
-<!-- FRASES PROHIBIDAS EN VUESTRO PORTFOLIO
-
-<p>
-  Mi sueño es encontrar mi primer empleo en el mundo de la programación. Una empresa donde pueda seguir aprendiendo. ❌
-</p>
-
-<p>
-  ❌ Apasionado de la programación desde chekitito. Me encantan los ordenadores y crear páginas web buenas y rápidas con la última tecnología.
-</p>
-
-<p>
-  Trabajo bien en equipo. Siempre estoy aprendiendo cosas nuevas.
-</p>
-
--------------------------------------
-
---------------------------------------
-
-<p>
-  ¡Soy Leo! Estudié Derecho Empresarial y, tras años ejerciendo, me pasé al mundo de la Programación. Desde entonces disfruto creando experiencias web para los usuarios.
-</p>
-
-<p>
-  Entre mis éxitos destaco que durante el Grado Superior, ayudé a mis compañeros a aprender sobre TDD. Me encanta el testing, creo en su importancia, y me gusta compartir mi conocimiento sobre ello.
-</p>
-
-<p>
-  Cuento con experiencia desarrollando aplicaciones móviles, y he creado una iniciativa llamada X para mezclar mis dos pasiones: la programación y el derecho. Ayudando a la sociedad a acceso a una defensa justa.
-</p>
-
----------------------------------------
-
-<p>Me llamo Sara, tengo 25 años y soy de Santiago, Chile 🇨🇱. Terminé mis estudios como Desarrolladora Web. Me encanta enfocarme en la parte del rendimiento, para ofrecer la mejora experiencia al usuario.</p>
-
-<p>
-  Colaboro en la organización del MeetUp local BeerJS donde reunimos a desarrolladores de Santiago para compartir conocimiento y experiencias. El año 2023 hicimos un total de 25 charlas con más de 2000 asistentes.
-</p>
-
-<p>
-  Además de participar activamente en la comunidad, he participado en la Hackathon de Midudev quedando en 3er puesto con mi proyecto _Chatty_, donde usando IA podías interactuar con un PDF. ¡Échale un vistazo!
-</p>
-
--->
