--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,8 +1,8 @@
 ---
-import NextJS from "../icons/Next.astro"
-import Tailwind from "../icons/Tailwind.astro"
-import Link from "../icons/Link.astro"
-import LinkButton from "./LinkButton.astro"
+import NextJS from "../icons/Next.astro";
+import Tailwind from "../icons/Tailwind.astro";
+import Link from "../icons/Link.astro";
+import LinkButton from "./LinkButton.astro";
 
 const TAGS = {
   NEXT: {
@@ -15,7 +15,7 @@ const TAGS = {
     class: "bg-[#003159] text-white",
     icon: Tailwind,
   },
-}
+};
 const PROJECTS = [
   {
     title: "Bloom Studio",
@@ -29,7 +29,7 @@ const PROJECTS = [
     title: "Studio by M - Macarena Bernal",
     description:
       "Plataforma gratuita. La web se trata de venta de cursos por Macarena Bernal (creados por ella) y seguimiento de los distintos cursos comprados por los usuarios (se otorgan certificados). Desarrollada con Node.js, Express, Mongoose, Next.js, React y Tailwind CSS.",
-    link: "https://studiobym.com.ar/",
+    link: "http://studiobym.com.ar/",
     image: "/img/projects/studioByM.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
@@ -41,37 +41,43 @@ const PROJECTS = [
     image: "/img/projects/psicopedagogia.webp",
     tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
-]
+];
 ---
 
 <div class="flex flex-col gap-y-16">
   {
     PROJECTS.map(({ image, title, description, tags, link }) => (
-    <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
-  <div class="w-full md:w-1/2">
-    <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
-      <img alt="Recién llegado vs 5 años en Nueva Zelanda" class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
-    </div>
-  </div>
+      <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
+        <div class="w-full md:w-1/2">
+          <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
+            <img
+              alt="Recién llegado vs 5 años en Nueva Zelanda"
+              class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105"
+              loading="lazy"
+              src={image}
+            />
+          </div>
+        </div>
 
-  <div class="w-full md:w-1/2 md:max-w-lg">
-    <h3 class="text-2xl font-bold text-gray-100 dark:text-gray-100">
-      {title}
-    </h3>
-    <div class="flex flex-wrap mt-2">
-
-      <div class="mt-2 text-gray-500 dark:text-gray-300">{description}</div>
-      <footer class="flex items-end justify-start mt-4 gap-x-4">
-          {link && (
-            <LinkButton href={link}>
-              <Link class="size-4" />
-              Web
-            </LinkButton>
-          )}
-        </footer>
-    </div>
-  </div>
-</article>
+        <div class="w-full md:w-1/2 md:max-w-lg">
+          <h3 class="text-2xl font-bold text-gray-100 dark:text-gray-100">
+            {title}
+          </h3>
+          <div class="flex flex-wrap mt-2">
+            <div class="mt-2 text-gray-500 dark:text-gray-300">
+              {description}
+            </div>
+            <footer class="flex items-end justify-start mt-4 gap-x-4">
+              {link && (
+                <LinkButton href={link}>
+                  <Link class="size-4" />
+                  Web
+                </LinkButton>
+              )}
+            </footer>
+          </div>
+        </div>
+      </article>
     ))
   }
 </div>
