--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,29 +1,31 @@
 ---
-const personalImageAlt = "Marcos Solis"
-import { personalData } from "../../utils/data/personal-data"
-import Badge from "./Badge.astro"
-import Social from "./Social.astro"
-import LinkedInIcon from '../icons/LinkedIn.astro'
-import GitHubIcon from '../icons/GitHub.astro'
-import MailIcon from '../icons/Mail.astro'
-import DownloadIcon from '../icons/Download.astro'
+const personalImageAlt = "Marcos Solis";
+import { personalData } from "../../utils/data/personal-data";
+import Badge from "./Badge.astro";
+import Social from "./Social.astro";
+import LinkedInIcon from "../icons/LinkedIn.astro";
+import GitHubIcon from "../icons/GitHub.astro";
+import MailIcon from "../icons/Mail.astro";
+import DownloadIcon from "../icons/Download.astro";
 ---
-<article class="flex flex-col items-center justify-center gap-8 text-gray-400 dark:text-gray-300 md:flex-row">
-<div class="max-w-xl">
-  <h1
-  class="text-4xl font-bold tracking-tight text-blue-400 sm:text-5xl dark:text-white"
-  >
-  Hola, soy Marcos Solis
-</h1>
-<p
-class="mt-6 text-xl text-blue-400 dark:[&>strong]:text-yellow-500 [&>strong]:text-yellow-200 [&>strong]:font-semibold dark:text-gray-300"
-  >
-  <strong
-  >Desarrollador y Programador Web Full Stack.</strong
-  > De Santa Fe, Argentina. Especializado en el desarrollo de aplicaciones web y mobile.
-</p>
-<nav class="flex flex-wrap gap-4 mt-8">
-  <!-- <Social href="https://www.linkedin.com/in/marcos-solis-512862283/">
+
+<article
+  class="flex flex-col items-center justify-center gap-8 text-gray-400 dark:text-gray-300 md:flex-row"
+>
+  <div class="max-w-xl">
+    <h1
+      class="text-4xl font-bold tracking-tight text-blue-400 sm:text-5xl dark:text-white"
+    >
+      Hola, soy Marcos Solis
+    </h1>
+    <p
+      class="mt-6 text-xl text-blue-400 dark:[&>strong]:text-yellow-500 [&>strong]:text-yellow-200 [&>strong]:font-semibold dark:text-gray-300"
+    >
+      <strong>Desarrollador y Programador Web Full Stack.</strong> De Santa Fe, Argentina.
+      Especializado en el desarrollo de aplicaciones web y mobile.
+    </p>
+    <nav class="flex flex-wrap gap-4 mt-8">
+      <!-- <Social href="https://www.linkedin.com/in/marcos-solis-512862283/">
     <LinkedInIcon class="size-4 md:size-6" />
     LinkedIn
   </Social>
@@ -31,18 +33,25 @@ class="mt-6 text-xl text-blue-400 dark:[&>strong]:text-yellow-500 [&>strong]:tex
     <GitHubIcon class="size-4 md:size-6"/>
     GitHub
   </Social> -->
-  <Social href="mailto:marcossolis023@gmail.com">
-    <MailIcon class="size-4 md:size-6" />
-    marcossolis023@gmail.com
-  </Social>
-  <Social href={personalData.resume}>
-    <DownloadIcon class="size-4 md:size-6" />
-    Descargar mi CV
-  </Social>
-</nav>
-</div>
+      <Social href="mailto:marcossolis023@gmail.com">
+        <MailIcon class="size-4 md:size-6" />
+        marcossolis023@gmail.com
+      </Social>
+      <Social href={personalData.resume}>
+        <DownloadIcon class="size-4 md:size-6" />
+        Descargar mi CV
+      </Social>
+    </nav>
+  </div>
 
-<img width="200" height="200" src="/img/marcos-foto-1.jpg" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
+  <img
+    width="200"
+    height="200"
+    src="/img/marcos-foto-1.jpg"
+    alt={personalImageAlt}
+    class="order-1 object-cover w-64 h-full p-1 md:order-2 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20"
+    style="object-position: 50% 50%"
+  />
 </article>
 
 <!-- <div class="flex gap-8 mb-4">
